@@ -1,3 +1,5 @@
+2002-12-02 17:00, v1.2.1:
+ - hopefully fixed cursor bug with PostgreSQL 7.3
 2002-12-01 22:00, v1.2.0:
  - new CachedResult class
 2002-11-07 13:15, v1.1.4:
